# grib2-visualization

./: LICENSE  Makefile  README.md
.github/workflows/: static.yml
react/: package.json
react/public/: index.html  manifest.json
react/src/: App.js  Grayscale16bppBitmapLayer.js  RunLengthPackingBitmapLayer.js  SimplePackingBitmapLayer.js  colormap-utils.js  grayscale16bpp-bitmaplayer-fragment.js  index.css  run-length-packing-bitmaplayer-fragment.js  simple-packing-bitmaplayer-fragment.js  utils.js  utils.test.js
react/src/Components/: Grib2List.js  Settings.js
rust/: Cargo.toml  LICENSE_MIT
rust/src/: grib2.rs  lib.rs  parameter-descriptions.json
rust/src/grib2/: bit_map_utils_impl.rs  decode_utils_impl.rs  section.rs  type_utils_impl.rs  utils_impl.rs
rust/src/grib2/section/: section0_impl.rs  section1_impl.rs  section2_impl.rs  section3_impl.rs  section4_impl.rs  section4_template.rs  section5_impl.rs  section5_template.rs  section6_impl.rs  section7_impl.rs  section7_template.rs  section_impl.rs  sectionset_impl.rs
rust/src/grib2/section/section4_template/: section4_template_impl.rs
rust/src/grib2/section/section5_template/: section5_template_impl.rs
rust/src/grib2/section/section7_template/: section7_template_impl.rs
