[package]
name = "rust"
version = "0.1.0"
authors = ["Taro Seo"]
edition = "2018"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version="0.2.63", features = ["serde-serialize"] }
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
chrono = { version="0.4.24", features = ["serde"] }
num-traits = "0.2.15"
serde = { version="1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
